@@ -1,3 +1,5 @@
+-Fix when importing 1.x databases containing a single quote in a media filename
+ (reported by Jan Egil Hagen).
 -Don't crash the SQL engine if you have more than 1000 tags (reported by Mats 
  Hansson).
 
